| Summary: | ASTERISK-26540: cdr_radius: use radcli instead of freeradius-client | ||
| Reporter: | Tzafrir Cohen (tzafrir) | Labels: | |
| Date Opened: | 2016-11-01 05:13:52 | Date Closed: | 2016-11-20 22:57:44.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | CDR/cdr_radius |
| Versions: | 13.12.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Lately in Debian radcli is the favorite RADIUS client, replacinf freeradius-client and radiusclient-ng.
Usage: Generally compatible with the latter two. But: {code} AST_EXT_LIB_CHECK([RADIUS], [radcli], [rc_read_config], [radcli/radcli.h]) {code} {code} #include <radcli/radcli.h> {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-11-01 05:13:53.476-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2016-11-03 09:20:45.172-0500 Hey Tzafrir! Are you working on a patch? By: Tzafrir Cohen (tzafrir) 2016-11-03 11:33:19.867-0500 Not right now, but hope to. This bug is here first and foremost to document a different between the Debian package and Upstream. It will need to be fixed eventually. By: Rusty Newton (rnewton) 2016-11-10 18:17:55.186-0600 Acknowledged. Thanks. By: Friendly Automation (friendly-automation) 2016-11-20 22:57:45.322-0600 Change 4404 merged by zuul: Add support for building RADIUS with radcli [https://gerrit.asterisk.org/4404|https://gerrit.asterisk.org/4404] By: Alexander Traud (traud) 2018-03-06 03:46:12.374-0600 Was there a special reason, why this has not been backported? With the upcoming Ubuntu 18.04 LTS, this affects also Asterisk 13 LTS. I would be more than happy to see it in Asterisk 13 as compatibility improvement. [~tzafrir] did you try to submit such a change already? By: Friendly Automation (friendly-automation) 2018-04-06 08:47:53.380-0500 Change 8636 merged by Jenkins2: BuildSystem: Add support for building RADIUS with radcli. [https://gerrit.asterisk.org/8636|https://gerrit.asterisk.org/8636] | ||